<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.hadialathas.moviebox.activity.DetailsActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/margin_extra_large"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:scaleType="centerCrop"
                android:background="@color/colorBlack"
                android:id="@+id/iv_movie_background"
                android:contentDescription="@string/content_image_background"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-55dp"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="150dp"
                    android:scaleType="fitStart"
                    android:background="@color/colorGreyLight"
                    android:id="@+id/iv_movie_image"
                    android:contentDescription="@string/content_image_poster"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="70dp"
                    android:layout_marginStart="@dimen/margin_extra_large"
                    android:layout_marginLeft="@dimen/margin_extra_large">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_larger"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold"
                        android:text="@string/app_name"
                        android:id="@+id/tv_movie_title"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_medium"
                        android:textColor="@color/colorGrey"
                        android:layout_marginTop="@dimen/margin_small"
                        android:text="@string/error_message"
                        android:id="@+id/tv_movie_release_date"
                        />

                    <ImageView
                        android:id="@+id/iv_favorites"
                        android:layout_width="@dimen/margin_25"
                        android:layout_height="@dimen/margin_25"
                        android:layout_marginTop="@dimen/margin_small"
                        android:src="@drawable/star_unselected"
                        android:contentDescription="@string/favorites"
                        />

                </LinearLayout>

            </LinearLayout>


            <GridLayout
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:columnCount="3"
                android:rowCount="1"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="110dp"
                    android:layout_height="100dp"
                    android:layout_column="0"
                    android:layout_row="0"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_movie_vote_avg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_larger"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/dummy_vote_average"/>

                    <TextView
                        android:id="@+id/tv_movie_vote_avg_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_medium"
                        android:layout_marginTop="@dimen/margin_small"
                        android:textColor="@color/colorGrey"
                        android:text="@string/vote_average"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="110dp"
                    android:layout_height="100dp"
                    android:layout_column="1"
                    android:layout_row="0"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_movie_vote_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_larger"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/dummy_total_votes"/>

                    <TextView
                        android:id="@+id/tv_movie_vote_total_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_medium"
                        android:layout_marginTop="@dimen/margin_small"
                        android:textColor="@color/colorGrey"
                        android:text="@string/total_votes"/>


                </LinearLayout>


                <LinearLayout
                    android:layout_width="110dp"
                    android:layout_height="100dp"
                    android:layout_column="2"
                    android:layout_row="0"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_movie_popularity_rank"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_larger"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/dummy_popularity_rank"/>

                    <TextView
                        android:id="@+id/tv_movie_popularity_rank_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_medium"
                        android:layout_marginTop="@dimen/margin_small"
                        android:textColor="@color/colorGrey"
                        android:text="@string/popularity_rank"/>

                </LinearLayout>

            </GridLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_large"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large"
                android:text="@string/story_line"
                android:id="@+id/tv_movie_synopsis"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_medium"
                android:textColor="@color/colorGrey"
                android:layout_marginTop="@dimen/margin_default"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large"
                android:text="@string/story_line"
                android:id="@+id/tv_movie_synopsis_details"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_large"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large"
                android:text="@string/trailers"
                android:id="@+id/tv_movie_trailers"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_trailers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large"
                android:overScrollMode="always"
                android:scrollbars="vertical"
                android:layout_weight="1"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_large"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large"
                android:text="@string/reviews"
                android:id="@+id/tv_movie_reviews"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large"
                android:layout_weight="1"
               />


        </LinearLayout>

    </FrameLayout>
</ScrollView>